# MCP-Ollama

./: fastmcp.py  langmodel.py  main.py  pyproject.toml
