[project]
name = "mcp-llm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fastmcp>=2.12.2",
    "langchain==0.3.26",
    "langchain-mcp-adapters==0.1.9",
    "langchain-ollama==0.3.5",
    "langgraph==0.5.3",
    "ollama==0.5.1",
    "pydantic-settings==2.10.1",

]
